# wp-microshop

./: .gitignore  README.md  crud.py  db.sqlite3  items_views.py  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2025_08_01_0839-7f49059a1d51_create_products_table.py  2025_08_03_1312-810d98228543_create_product_table.py  2025_08_03_1326-52b51358c1d8_create_users_table.py  2025_08_03_1346-c19c8071b6e8_create_posts_table.py  2025_08_03_1440-4d68bb032a8b_create_profile_table.py  2025_08_05_1008-ab8a8d4a57ab_create_profile_table.py  2025_08_07_1329-7bf2315696ea_create_orders_table.py  2025_08_08_1347-bddee70390d4_create_order_product_association_table.py  2025_08_13_1211-94baa87b9131_fixed_order_product_association.py  2025_08_13_1230-08646b64afa8_add_count_column_to_order_product_.py  2025_08_13_1314-74abc95927a9_add_unit_price_in_order_product_.py
api_v1/: __init__.py
api_v1/demo_auth/: demo_jwt_auth.py  views.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
auth/: README.md  utils.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
