[project]
name = "microshop"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.0,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.35.0"}
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
